# Fynace

./: .gitignore  README.md  apimercado.py  manage.py  pyproject.toml  requirements.txt
backend/: auth.py  auth_utils.py  config.py  db.py  gsheet.py  main.py  models.py  requirements.txt
backend/config_modules/: security_config.py
backend/database/: database_service.py
backend/legacy/: gsheet.py
backend/models/: transaction.py
backend/payments/: mercado_pago_service.py  payment_models.py  webhook.py
backend/routes/: financas.py  pagamentos.py  resumo.py  transacoes.py
backend/services/: google_sheets_service.py  transaction_service.py
backend/utils/: logging.py  monitoring.py  security.py  validation.py
frontend/: app.py
frontend/assets/: styles.css
frontend/components/: cards_component.html
frontend/utils/: api_client.py
